JSHManager ChangeLog

Version 0.2.4
-------------
- Fixed error when trying to download song data after a song's name
  had been changed on ScoreHero.
- Added Rock Band 2 for PS3.

Version 0.2.3
-------------
- Some text has been converted to be more "friendly."
- The splash screen is no longer always-on-top.
- Added a context menu when you right-click on a song in the scores
  table. It has items to bring you to the song's rankings, wiki, and
  SP wiki pages as well as a menu for any links from the SP wiki page,
  which are usually links to SP path images.
- Added wiki menu for quick wiki access.
- Added an update checker. A download link will be displayed in the 
  status bar if a newer version is available (you must still install
  the update manually however).
- Added CTRL+ALT+U shortcut to open the Score Upload Wizard.

Version 0.2.2
-------------
- Corrected a bug that prevented you from logging in if you did not
  enter your username /exactly/ as it appeared on ScoreHero.
- Clicking a blue, underlined score (or the open button next to the image
  URL in the editor) will now open an internal picture viewer instead of 
  launching an external browser, if possible.
- Added better detection for determining if a score submission was successful. 
  Scores can be resubmitted if it is not certain they were submitted initially.
  These scores will be highlighted red instead of blue to indicate their
  status.
- Added "Go to Song" item to the main "Scores" menu and the score editor.

Version 0.2.1
-------------
- Added extra logging and improved error checking when logging in to
  ScoreHero.
- Added a new menu item to upload logs to pastebin.com in the
  Help -> View Log menu. After uploading, you can copy and paste the
  URLs when reporting an issue so that I can see the logging information.
- Added a new step to the score download wizard that allows you to download
  scores for multiple platforms/difficulties/instruments in one shot.