@@ -207,7 +207,7 @@ public class RbScoreScraper {
 					Integer.parseInt(data[2][0]));
 			
 			if (null == song)
-				throw new ScraperException("RbSong not found, scoreHeroId: " + data[2][0]);
+				throw new ScraperException("RbSong not found, scoreHeroId: " + data[2][0] + ". Try updating your song data.");
 			
 			// see how many total scores there are so we know if
 			// we need to make an additional request
