@@ -5,6 +5,7 @@ Version 0.2.4
 - Fixed error when trying to download song data after a song's name
   had been changed on ScoreHero.
 - Added Rock Band 2 for PS3.
+- Added AC/DC Live Track Pack tier for Rock Band games.
 
 Version 0.2.3
 -------------
